# parser_playwright_2022

./: .gitignore  README.md  conftest.py  hh_molch_1.py  hh_playwright.py  no_doubles.py  pyproject.toml  pytest.ini
config/: hh.ini
files/: minus_lists.py  plus_lists.py  store.json
tests/core/: api.py  base_plw.py  steps.py  store.py  unit_steps.py
tests/features/: data_engineer.feature  dev_android.feature  tester_ios.feature  tester_python_web.feature  unit_test.feature
tests/suites/: test_geoip.py  test_tester.py  test_unit.py
utils/: app_config.py  custom_errors.py  elements.py
